# opentelemetry-injector

./: .gitignore  .shellcheckrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  RELEASING.md  build.zig  build.zig.zon  devel.Dockerfile  renovate.json  start-injector-dev-container.sh  zig-version
.chloggen/: TEMPLATE.yaml  add_exclude_include_paths_option.yaml  agent_env.yaml  config.yaml  env_vars_bug_fix.yaml  fix-config-reading.yaml  limit_env_var_injection.yaml  lookup-dlsym-setenv-and-environ-then-inject-via-setenv.yaml  make-path-to-config-file-configurable.yaml  nodejs_testing.yaml  pid_cmdline_logs.yaml  remove_systemd.yaml  zig-injector.yaml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  other.yaml
.github/workflows/: build.yml  changelog.yml  create-tag-for-release.yml  ossf-scorecard.yml  prepare-release.yml  publish-repos.yml
demo/: README.md  docker-compose.yaml  run
demo/client/: Dockerfile  pom.xml
demo/server/: Dockerfile  pom.xml
injector-integration-tests/: README.md
packaging/: README  build  dotnet-agent-release.txt  java-agent-release.txt  nodejs-agent-release.txt
src/: allocator.zig  args_parser.zig  auxv.zig  config.zig  dotnet.zig  elf.zig  injector.exports.map  jvm.zig  lib.rs  libc.zig  main.c  node_js.zig  nodejs.zig  patterns_matcher.zig  patterns_util.zig  print.zig  print_test.zig  resource_attributes.zig  resource_attributes_test.zig  root.zig  test.zig  test_util.zig  types.zig
test/: README.md  test.sh
tests/dotnet/: test.sh  (+2 more)
(+182 files in other folders)
